k8s/base/9-kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.7.0
        readinessProbe:
          httpGet:
            path: /api/status
            port: 5601
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
        ports:
        - containerPort: 5601
