k8s/base/10-kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: myapp
spec:
  selector:
    app: kibana
  ports:
  - protocol: TCP
    port: 5601
    targetPort: 5601
  type: LoadBalancer
